<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_ReadTime" Id="{41809a93-5b53-47f0-b8b5-05c700b2cea3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_ReadTime
VAR 
	bReset 					:BOOL;	
	bSignalIn				:BOOL;

	//Delta time in ms from Digital sensor to camera TCP
	aDeltaTimeMS			: ARRAY[0..GVL_Constant.ITEM_ARRAY_SIZE] OF UDINT;

	//Digital input sensor
	aDigitalSensorTime		: ARRAY[0..ITEM_ARRAY_SIZE] OF STRING;
	
	//Camera TCP port
	aTCPPortCameraTime		:ARRAY[0..ITEM_ARRAY_SIZE] OF STRING;
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//IO
bSignalIn := GVL_IO.stItemSimulator.bSignalIn;

//Set Commands
M_SetCommands();

//Call Functions
M_SaveSensorTime();
M_SaveCameraTCPTime();
M_CalculateDeltaTime();

//Reset Commands
M_ResetCommands();]]></ST>
    </Implementation>
    <Method Name="M_CalculateDeltaTime" Id="{a5129a3c-0d36-4a82-bf14-e117a70e330a}">
      <Declaration><![CDATA[METHOD PUBLIC M_CalculateDeltaTime
VAR
	iDeltaTime			:INT;
	iNDeltaTime			:INT;
	rDeltaTrig			:R_TRIG;
	SavedCameraTime		:T_FILETIME;
	SavedSensorTime		:T_FILETIME;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Get saved time from camera and sensor method
SavedCameraTime:=M_SaveCameraTCPTime();
SavedSensorTime:=M_SaveSensorTime();

//Trigger of camera tcp read complete. Uses same as camera as this is the last one to receive
rDeltaTrig(CLK:=PRG_TCPIP.fbReadFromCameraTCP.bReadComplete);

IF rDeltaTrig.Q THEN
	
	//Calculate delta time
	aDeltaTimeMS[iDeltaTime] :=  (F_CXSubTimeStamp(nTimeStampHiDW_A:=SavedCameraTime.dwHighDateTime,
													   nTimeStampHiDW_B:=SavedSensorTime.dwHighDateTime,
													   nTimeStampLoDW_A:=SavedCameraTime.dwLowDateTime,
													   nTimeStampLoDW_B:=SavedSensorTime.dwLowDateTime)/1000);
	iDeltaTime := iDeltaTime +1;
END_IF

//Reset registry
IF bReset THEN
	FOR iNDeltaTime := 0 TO GVL_Constant.ITEM_ARRAY_SIZE DO 
		aDeltaTimeMS[iNDeltaTime] := 0;
	END_FOR
	iDeltaTime := 0;
END_IF

]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_ResetCommands" Id="{74db0409-a38e-4eee-b70a-2501178068c0}">
      <Declaration><![CDATA[METHOD PRIVATE M_ResetCommands
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Reset Commands
GVL_HMI.stTimestampCmd.bResetRegistry := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_SaveCameraTCPTime" Id="{9f3cdf40-e788-4c90-aed5-163aedc53860}">
      <Declaration><![CDATA[METHOD PUBLIC M_SaveCameraTCPTime : T_FILETIME
VAR
	rTCPPortCamera		:R_TRIG;
	iTCPPortCamera		:INT;
	iNTCPCamera			:INT;
	fbGetCameraTime		:FB_SystemTime;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Trigger of camera tcp read complete
rTCPPortCamera(CLK:=PRG_TCPIP.fbReadFromCameraTCP.bReadComplete);

IF rTCPPortCamera.Q THEN
	aTCPPortCameraTime[iTCPPortCamera] := fbGetCameraTime.M_SystemTimeToString();
	
	fbGetCameraTime.fbSystemTime(timeLoDW=>M_SaveCameraTCPTime.dwLowDateTime,
    							 timeHiDW=>M_SaveCameraTCPTime.dwHighDateTime);
	
	iTCPPortCamera := iTCPPortCamera +1;
END_IF

//Reset registry
IF bReset THEN
	FOR iNTCPCamera := 0 TO GVL_Constant.ITEM_ARRAY_SIZE DO 
		aTCPPortCameraTime[iNTCPCamera] := '';
	END_FOR
	iTCPPortCamera := 0;
END_IF



]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_SaveSensorTime" Id="{cd1a26d1-d744-4b0d-8d44-8a38ddfb04e9}">
      <Declaration><![CDATA[METHOD PUBLIC M_SaveSensorTime : T_FILETIME
VAR
	rDigitalSensorIn		:R_TRIG;
	iDigitalSensor			:INT;
	iNDigitalSensor			:INT;
	fbGetSensorTime			:FB_SystemTime;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Trigger of sensor input
rDigitalSensorIn(CLK:=bSignalIn);

IF rDigitalSensorIn.Q THEN
	aDigitalSensorTime[iDigitalSensor] := fbGetSensorTime.M_SystemTimeToString();
	
	fbGetSensorTime.fbSystemTime(timeLoDW=>M_SaveSensorTime.dwLowDateTime,
    							 timeHiDW=>M_SaveSensorTime.dwHighDateTime);
								 
	iDigitalSensor := iDigitalSensor +1;
END_IF

//Reset registry
IF bReset THEN
	FOR iNDigitalSensor := 0 TO GVL_Constant.ITEM_ARRAY_SIZE DO 
		aDigitalSensorTime[iNDigitalSensor] := '';
	END_FOR
	iDigitalSensor := 0;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_SetCommands" Id="{51730a3a-dc77-4efb-ad56-60c19693c631}">
      <Declaration><![CDATA[METHOD PRIVATE M_SetCommands
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Set Commands
bReset := GVL_HMI.stTimestampCmd.bResetRegistry;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_StatusHMI" Id="{07c83b8d-d512-478b-acd0-c9301802f0e4}">
      <Declaration><![CDATA[METHOD PUBLIC M_StatusHMI
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_ReadTime">
      <LineId Id="321" Count="11" />
      <LineId Id="296" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_CalculateDeltaTime">
      <LineId Id="39" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="14" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="29" Count="3" />
      <LineId Id="34" Count="4" />
      <LineId Id="28" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_ResetCommands">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_SaveCameraTCPTime">
      <LineId Id="33" Count="0" />
      <LineId Id="6" Count="4" />
      <LineId Id="36" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="18" Count="2" />
      <LineId Id="34" Count="0" />
      <LineId Id="21" Count="3" />
      <LineId Id="26" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_SaveSensorTime">
      <LineId Id="22" Count="0" />
      <LineId Id="6" Count="3" />
      <LineId Id="25" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="15" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_SetCommands">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ReadTime.M_StatusHMI">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>